# Engine

./: CMakeLists.txt  README.md  lines.py  main.cpp
engine/: README.md
engine/API/: Color.h  Matrices.h  Matrix.h  Mesh.h  Meshes.h  Renderer.h  Shader.h  Time.h  Transform.h  Vector.h  Vector2i.h  Vectors.h  Vertex.h  Window.h  apiHeader.h  engineHeader.h
engine/common/: Color.cpp  Matrix.cpp  Mesh.cpp  Meshes.cpp  Transform.cpp  Vector.cpp  Vector2i.cpp  Vectors.cpp  Vertex.cpp
engine/ogl/: CMakeLists.txt  Renderer.cpp  Shader.cpp  Time.cpp  Vertex.cpp  VertexAttributeBuilder.h  Window.cpp  oglHeader.h
res/shaders/: basic.frag  basic.vert
