add_library(engine_oGL STATIC Window.cpp oglHeader.h Shader.cpp Renderer.cpp VertexAttributeBuilder.h Time.cpp) # OpenGL implementation
FetchContent_Declare( GLFW GIT_REPOSITORY https://github.com/glfw/glfw GIT_TAG 3.3.4 )
FetchContent_MakeAvailable(GLFW)
FetchContent_Declare( glad GIT_REPOSITORY https://github.com/Dav1dde/glad.git GIT_TAG v0.1.34 )
FetchContent_GetProperties(glad)
if(NOT glad_POPULATED)
    FetchContent_Populate(glad)
    set(GLAD_INSTALL ON)
    add_subdirectory( ${glad_SOURCE_DIR} ${glad_BINARY_DIR} EXCLUDE_FROM_ALL)
endif()
find_package(OpenGL REQUIRED)
target_link_libraries(engine_oGL glad glfw ${OPENGL_LIBRARIES} pthread engine_common)